--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,17 +6,24 @@
     <title>Document</title>
     <style>
         body {
-            height: 97vh;
+            /*height: 97vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background 
+                color > image > position > repeat > [size] > attachment
+            */
+            background: black url('imagens/wallpaper002.jpg') center center repeat-y fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus assumenda voluptatem maiores nam, magni consequatur quis neque placeat aut soluta ut tempore veniam corrupti eos nobis dicta? Minima, in quibusdam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, explicabo sint ut et hic autem voluptas iure. Laboriosam, omnis asperiores. Molestias voluptate veniam laudantium eos, cupiditate nulla animi optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga recusandae laudantium deleniti incidunt corporis voluptatum dicta molestiae rem expedita repellendus, quibusdam, consectetur tempora excepturi aliquam facilis quas odit. Expedita!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus assumenda voluptatem maiores nam, magni consequatur quis neque placeat aut soluta ut tempore veniam corrupti eos nobis dicta? Minima, in quibusdam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, explicabo sint ut et hic autem voluptas iure. Laboriosam, omnis asperiores. Molestias voluptate veniam laudantium eos, cupiditate nulla animi optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga recusandae laudantium deleniti incidunt corporis voluptatum dicta molestiae rem expedita repellendus, quibusdam, consectetur tempora excepturi aliquam facilis quas odit. Expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure inventore molestiae rerum, nam nemo consequuntur, voluptatibus eaque quos, eum nihil sequi rem ex dolor repellendus incidunt numquam! Quasi, voluptas harum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nam doloribus temporibus quidem! Pariatur maiores nobis voluptas repudiandae. Praesentium alias impedit cum veniam voluptate hic iusto. Sequi sunt tempore qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, laudantium perspiciatis, perferendis aspernatur quia optio laboriosam voluptate facere, velit quae quaerat. Corporis aspernatur ad recusandae eaque omnis aperiam accusamus tempore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis modi ullam nostrum! Aut, laboriosam amet! Aspernatur nam adipisci iste voluptatum sit tempora aliquid laudantium ipsa nihil asperiores excepturi, et reprehenderit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur consequuntur labore recusandae ad, distinctio fugiat magnam! Dolor, alias, eveniet quo voluptates illo soluta reiciendis amet velit hic eos eligendi tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum repellat deleniti assumenda accusamus? Natus, repudiandae ab, vero cumque nulla ex vel eius voluptatem unde maxime possimus beatae iure incidunt hic? Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem minima ipsum rem eos fugiat dolorum, quaerat voluptatum ratione est perspiciatis officia cupiditate recusandae, eligendi vitae sed quo sint? Facilis, accusamus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum exercitationem aperiam fugit facilis veritatis maxime doloribus, fugiat eligendi voluptas similique tempore quidem corrupti unde pariatur. Officia consequatur aut repudiandae aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae delectus facilis iure rem adipisci, placeat nam sit perspiciatis provident praesentium ab nemo vero hic saepe mollitia nobis aspernatur modi ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dignissimos fugit ex quo, harum ad ipsa alias illo non. Dicta vitae, repellendus ut porro debitis odio ex veniam adipisci ullam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, reiciendis, quia voluptatibus facilis quos atque, eos quibusdam distinctio in officia odit voluptas omnis deserunt earum? Ipsa vitae excepturi debitis quam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum saepe a nobis, modi molestiae commodi sint molestias iusto sunt animi porro sed dicta voluptate. Dignissimos quos nam id numquam praesentium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus assumenda voluptatem maiores nam, magni consequatur quis neque placeat aut soluta ut tempore veniam corrupti eos nobis dicta? Minima, in quibusdam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia expedita, explicabo sint ut et hic autem voluptas iure. Laboriosam, omnis asperiores. Molestias voluptate veniam laudantium eos, cupiditate nulla animi optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga recusandae laudantium deleniti incidunt corporis voluptatum dicta molestiae rem expedita repellendus, quibusdam, consectetur tempora excepturi aliquam facilis quas odit. Expedita!</p>
     </main>
 </body>
 </html>
