--- a/desafios/d012/cordel.html
+++ b/desafios/d012/cordel.html
@@ -49,6 +49,7 @@
                     Se o saite é muito bom<br>
                     Ele vale um alto preço.
                 </p>
+                <br>
                 <p>
                     Pra piorar a liguagem<br>
                     O emoticom é um risco<br>
@@ -86,6 +87,7 @@
                     O mundo ficou cativo<br>
                     Da tecnologia do agora.
                 </p>
+                <br>
                 <p>
                     Felizmente, pra orar<br>
                     Não precisa de internet<br>
@@ -97,5 +99,8 @@
                 </p>
             </section>
     </main>
+    <footer>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
+    </footer>
 </body>
 </html>
