--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -29,6 +30,12 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         tbody tr:nth-child(odd) { /* 2n-1 */
@@ -183,5 +190,25 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab enim dignissimos autem obcaecati tempora. Beatae dignissimos fugiat, fuga veniam quisquam aliquam sapiente iste unde eligendi vitae velit iusto eveniet repellat?
+    Quis dolores et perspiciatis a cumque vel corrupti, nulla rerum ea odit, ut illo voluptate placeat saepe repellendus nisi? Aut, obcaecati nobis? Deserunt cum unde rerum! Sunt accusantium ducimus aspernatur.
+    Rerum est cum accusantium ab impedit distinctio, ea doloremque excepturi inventore pariatur laudantium amet. Provident voluptatibus magni, dignissimos accusantium, tempore nam eligendi consequatur officiis deleniti fugit sunt sit consectetur quos?
+    Labore vitae minus tempora voluptatum blanditiis similique ducimus delectus explicabo. Repellendus fugit modi error corporis eos quae similique ad impedit, porro natus dignissimos nisi ducimus. Corporis magni error quaerat aut.
+    Fugiat quisquam doloribus rem facilis rerum quam ipsa repellat a at reprehenderit ipsam unde commodi earum quos eveniet autem illo esse incidunt cum magni veritatis, dignissimos animi enim totam. Hic!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab enim dignissimos autem obcaecati tempora. Beatae dignissimos fugiat, fuga veniam quisquam aliquam sapiente iste unde eligendi vitae velit iusto eveniet repellat?
+        Quis dolores et perspiciatis a cumque vel corrupti, nulla rerum ea odit, ut illo voluptate placeat saepe repellendus nisi? Aut, obcaecati nobis? Deserunt cum unde rerum! Sunt accusantium ducimus aspernatur.
+        Rerum est cum accusantium ab impedit distinctio, ea doloremque excepturi inventore pariatur laudantium amet. Provident voluptatibus magni, dignissimos accusantium, tempore nam eligendi consequatur officiis deleniti fugit sunt sit consectetur quos?
+        Labore vitae minus tempora voluptatum blanditiis similique ducimus delectus explicabo. Repellendus fugit modi error corporis eos quae similique ad impedit, porro natus dignissimos nisi ducimus. Corporis magni error quaerat aut.
+        Fugiat quisquam doloribus rem facilis rerum quam ipsa repellat a at reprehenderit ipsam unde commodi earum quos eveniet autem illo esse incidunt cum magni veritatis, dignissimos animi enim totam. Hic!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab enim dignissimos autem obcaecati tempora. Beatae dignissimos fugiat, fuga veniam quisquam aliquam sapiente iste unde eligendi vitae velit iusto eveniet repellat?
+            Quis dolores et perspiciatis a cumque vel corrupti, nulla rerum ea odit, ut illo voluptate placeat saepe repellendus nisi? Aut, obcaecati nobis? Deserunt cum unde rerum! Sunt accusantium ducimus aspernatur.
+            Rerum est cum accusantium ab impedit distinctio, ea doloremque excepturi inventore pariatur laudantium amet. Provident voluptatibus magni, dignissimos accusantium, tempore nam eligendi consequatur officiis deleniti fugit sunt sit consectetur quos?
+            Labore vitae minus tempora voluptatum blanditiis similique ducimus delectus explicabo. Repellendus fugit modi error corporis eos quae similique ad impedit, porro natus dignissimos nisi ducimus. Corporis magni error quaerat aut.
+            Fugiat quisquam doloribus rem facilis rerum quam ipsa repellat a at reprehenderit ipsam unde commodi earum quos eveniet autem illo esse incidunt cum magni veritatis, dignissimos animi enim totam. Hic!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab enim dignissimos autem obcaecati tempora. Beatae dignissimos fugiat, fuga veniam quisquam aliquam sapiente iste unde eligendi vitae velit iusto eveniet repellat?
+                Quis dolores et perspiciatis a cumque vel corrupti, nulla rerum ea odit, ut illo voluptate placeat saepe repellendus nisi? Aut, obcaecati nobis? Deserunt cum unde rerum! Sunt accusantium ducimus aspernatur.
+                Rerum est cum accusantium ab impedit distinctio, ea doloremque excepturi inventore pariatur laudantium amet. Provident voluptatibus magni, dignissimos accusantium, tempore nam eligendi consequatur officiis deleniti fugit sunt sit consectetur quos?
+                Labore vitae minus tempora voluptatum blanditiis similique ducimus delectus explicabo. Repellendus fugit modi error corporis eos quae similique ad impedit, porro natus dignissimos nisi ducimus. Corporis magni error quaerat aut.
+                Fugiat quisquam doloribus rem facilis rerum quam ipsa repellat a at reprehenderit ipsam unde commodi earum quos eveniet autem illo esse incidunt cum magni veritatis, dignissimos animi enim totam. Hic!</p>
 </body>
 </html>
