--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, rem laboriosam alias, sed ab dolores eos, asperiores unde obcaecati minima ad? Amet fuga magnam minus possimus perspiciatis aliquam consequatur at.</p>
 
-    <iframe src="" id="tela" name="frame">
+    <iframe srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis vel magnam tempore culpa doloribus distinctio iste nisi, commodi, ipsum quos aliquam, unde porro non ab corporis voluptas! Distinctio, ex nihil?</p><img src='imagens/Screenshot_51.png'>" id="tela" name="frame">
         <p>Infelizmente o seu navegador não suporta isso!</p>
     </iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi aperiam vitae, quos eos reprehenderit ullam tenetur iste labore, ab architecto nisi ratione maiores minima perspiciatis ex expedita et voluptates.
